@@ -97,17 +97,9 @@
 
 		</dependencies>
 	</dependencyManagement>
-	<build>
+		<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<descriptorRefs>
-					  <descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-				</configuration>
-			</plugin>
+
 			<plugin>
   <groupId>org.sonarsource.scanner.maven</groupId>
   <artifactId>sonar-maven-plugin</artifactId>
@@ -135,12 +127,39 @@
         <goal>report</goal>
       </goals>
       <configuration>
-        <dataFile>${project.test.result.directory}/jacoco/jacoco.exec</dataFile>
-        <outputDirectory>${project.test.result.directory}/jacoco</outputDirectory>
+        <dataFile>${basedir}/target/coverage-reports/jacoco/jacoco.exec</dataFile>
+        <outputDirectory>${basedir}/target/coverage-reports/jacoco</outputDirectory>
       </configuration>
     </execution>
   </executions>
 </plugin>
+<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+			</plugin>
+<plugin>
+	
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.22.0</version>
+				<configuration>
+					<argLine>
+						--illegal-access=permit
+					</argLine>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 </project>
